--- a/css/styles.less
+++ b/css/styles.less
@@ -1,14 +1,85 @@
 body {
 	margin: 0px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .main {
+	min-width: 590px;
+	.go-to-link {
+		color: #0B7EAA;
+		text-decoration: none;
+		font-weight: bold;
+	}
+	.accent-box {
+		background-color: #CC2709;
+		height: 5px;
+		width: 95px;
+	}
+	/*--- HERO STYLES ---*/
 	.hero {
 		background-image: url('../img/aone-hero.png');
 		background-repeat: no-repeat;
 		background-size: cover;
 		width: 100%;
-		height: 400px;
+		height: 460px;
+		&__info-container {
+			margin-left: 20px;
+			margin-top: 130px;
+			h1 {
+				color: white;
+				font-size: 2.5rem;
+				span {
+					font-weight: normal;
+				}
+			}
+		}
+		&__search-drop {
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			appearance: none;
+			background-color: #EDEDED;
+			color: grey;
+			font-size: 1.2rem;
+			height: 50px;
+			width: 80px;
+			display: inline-block;
+			border-radius: 5px 0px 0px 5px;
+			border: none;
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+		&__search-drop-arrow {
+			display: inline-block;
+		}
+		&__search-drop-arrow:after {
+	    	position: absolute;
+		    content: '\25BC';
+		    color: grey;
+		    top: 320px;
+		    left: 80px;
+		}
+		&__search-bar {
+			display: inline-block;
+		    margin: -5px;
+		    border: none;
+		    height: 48px;
+		    width: 440px;
+		    padding-left: 10px;
+		    font-size: 1.2rem; 
+		}
+		&__search-submit {
+			display: inline-block;
+			background-color: white;
+			border: none;
+			border-radius: 0px 5px 5px 0px;
+			height: 50px;
+			cursor: pointer;
+			font-size: 1.2rem;
+		}
+		&__advance-search {
+			color: white;
+			text-decoration: none;
+		}
 	}
 	.badge {
 		background-image: url('../img/gale-badge.svg');
@@ -16,27 +87,165 @@ body {
 		background-size: contain;
 		width: 200px;
 		height: 90px;
+		display: inline-block;
 	}
 	.customer-logo {
 		background-color: white;
 		width: 150px;
 		height: auto;
-		margin: 10px;
+		margin: 20px;
 		border: solid 1px black;
 		border-radius: 15px;
 		float: right;
 		&__img {
 			background-image: url('../img/customer-logo.png');
 			background-repeat: no-repeat;
-			background-size: contain;
-			width: 100px;
-			height: 100px;
+			background-position: -5px -20px;
+		    background-size: 160px 160px;
+		    width: 150px;
+		    height: 100px;
 			margin: auto;
 		}
 		p {
-			margin: 0px 5px 10px;
+			margin: 0px 5px 20px;
 			text-align: center;
+			font-weight: bold;
+			color: #10631A;
 		}
 	}
+	/*--- END OF HERO STYLES ---*/
+
+	/*--- AUXILARY FILTER STYLES ---*/
+	.aux-filters {
+		width: 100%;
+		height: 90px;
+		box-shadow: 0 5px 7px -5px grey;
+		position: relative;
+		z-index: 2;
+		&__item {
+			height: auto;
+			float: right;
+			text-align: center;
+			margin: 20px 10px 5px;
+			.af-icon {
+				font-size: 1.6rem;
+			}
+			p {
+				margin: 9px 0;
+    			font-size: 0.8rem;	
+			}
+		}
+	}
+	/*--- END OF AUXILARY FILTER STYLES ---*/
+
+	/*--- CONTENT SECTION STYLES ---*/
+	.content {
+		background-color: #EDEDED;
+		.content-header {
+			color: grey;
+			margin-bottom: 5px; 
+		}
+		.browse-topics {
+			padding: 20px;
+			width: 750px;
+			margin-bottom: 50px;
+			&__description {
+				font-weight: bold;
+			}
+			&__topics-container {
+				#topics-container {
+					display: flex;
+					flex-direction: row;
+					flex-wrap: wrap;
+					button {
+						background-color: white;
+					    color: #0B7EAA;
+					    font-size: 1rem;
+					    font-weight: bold;
+					    border: solid 2px #0B7EAA;
+					    padding: 10px;
+					    border-radius: 5px;
+					    margin: 5px;
+					    cursor: pointer;
+					}
+					button:last-child {
+				    	margin-left: 10px;
+				    }
+				    .go-to-link {
+				    	margin-left: 10px;
+				    	padding-top: 15px;
+				    }
+				}
+			}
+		}
+		.search-tools {
+			padding: 20px;
+			margin-bottom: 50px;
+			.item {
+				width: 400px;
+				display: inline-block;
+				vertical-align: top;
+				h3 {
+					margin-bottom: 10px;
+				}
+				&__img {
+					width: 50px;
+				    height: 50px;
+				    display: inline-block;
+				    vertical-align: top;
+				}
+				&__description {
+					display: inline-block;
+					width: 300px;
+					margin-left: 10px;
+					p {
+						margin: 0;
+					}
+				}
+			}
+		}
+		.onefile-count {
+			background-color: lightgrey;
+			border-top: solid 3px white;
+			border-bottom: solid 3px white;
+			text-align: right;
+			padding: 10px 20px;
+			p {
+				margin: 0;
+			}
+		}
+	}
+	/*--- END OF CONTENT SECTION STYLES ---*/
+
+	/*--- FOOTER SECTION STYLES ---*/
+	.footer {
+		background-color: #EDEDED;
+		padding: 20px;
+		width: 100%;
+		&__container {
+			display: inline-block;
+			width: 100%;
+			div {
+				display: inherit;
+				img {
+					vertical-align: middle;
+				}
+			}
+			.footer__links {
+				margin: 0 12%;
+				a {
+					border-right: solid 1px #0B7EAA;
+					padding-right: 10px;
+					margin: 0 5px 0 0;
+					color: #0B7EAA;
+				}
+				a:last-child {
+					border: none;
+				}
+			}
+		}
+	}
+	/*--- END OF FOOTER SECTION STYLES ---*/
+	
 }
 
